package pt.ipp.isep.dei.dto;

public class LocomotiveTypeDTO {
    public LocomotiveTypeDTO() { throw new UnsupportedOperationException("Not implemented yet"); }
    public String name;
    public double speed;
    public double power;
    public double cost;
}
